--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,10 +1,13 @@
-FROM oven/bun:alpine as base
+FROM oven/bun:debian as base
 WORKDIR /app
 
 COPY package.json .
+COPY bun.lockb .
+
 RUN bun install
+
 COPY . .
 
 # run the app
 EXPOSE 3000/tcp
-ENTRYPOINT [ "bun", "start"]
+ENTRYPOINT [ "bun", "start:dev"]
